src/templates/styles.css
.card {
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  box-sizing: border-box;
  font-family: arial;
  font-size: 26px;
  text-align: center;
  color: #333333;
  background-color:white;
  padding: 20px 0;
}

.divider {
  width: 85%;
  margin: 1.5rem auto;
  border-bottom: 1px solid black;
}

.expression {
  font-size: 44px;
}

